--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
 
   <!-- Icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
+  <!-- Main Styles -->
+  <link rel="stylesheet" href="./src/style.css">
 </head>
+
 
 <body>
   <!-- Navigation -->
@@ -159,7 +163,8 @@
                 <h4>List of MOOCs Courses (2024-25)</h4>
                 <p>PDF - 1.3 MB</p>
               </div>
-              <a href="https://drive.google.com/file/d/1U9-mVIjtpqL1uJyMngMt0NnTZI-pPfzt/view?usp=drive_link" target="_blank" class="btn-icon"><i class="fa-solid fa-download"></i></a>
+              <a href="https://drive.google.com/file/d/1U9-mVIjtpqL1uJyMngMt0NnTZI-pPfzt/view?usp=drive_link"
+                target="_blank" class="btn-icon"><i class="fa-solid fa-download"></i></a>
             </div>
             <div class="doc-card">
               <div class="doc-icon"><i class="fa-solid fa-file-pdf"></i></div>
@@ -167,7 +172,8 @@
                 <h4>AKTU NPTEL NORMS</h4>
                 <p>PDF - 276 KB</p>
               </div>
-              <a href="https://drive.google.com/file/d/1RHQSAUFkN5VpkhKAfJQnzdHuRULGrXB4/view?usp=drive_link" target="_blank" class="btn-icon"><i class="fa-solid fa-download"></i></a>
+              <a href="https://drive.google.com/file/d/1RHQSAUFkN5VpkhKAfJQnzdHuRULGrXB4/view?usp=drive_link"
+                target="_blank" class="btn-icon"><i class="fa-solid fa-download"></i></a>
             </div>
           </div>
         </div>
@@ -289,7 +295,7 @@
     </div>
   </footer>
 
-  <script type="module" src="/src/main.js"></script>
+  <script src="./src/main.js" defer></script>
 </body>
 
 </html>
